# anofox-similarity

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  TELEMETRY.md  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
docs/: API_REFERENCE.md  CONCEPT.md  DATA-STRUCTURES.md  INCREMENTAL_UPDATE_PERFORMANCE.md  Microsoft_Dynamics_365_BOM_Explosion_Technical_Memo.md  PERFORMANCE_REPORT_PHASE2D.md  SAP_BOM_Explosion_Technical_Memo.md
guides/adventureworks/: 01_cold_start_forecasting.md  02_product_families.md  03_bom_navigation.md  04_quality_tiers.md  05_accuracy_validation.md  README.md
guides/sap/: 01_data_transformation.md  02_alternative_boms.md  03_point_in_time_analysis.md  04_similarity_at_scale.md  05_multilanguage_descriptions.md  README.md
scripts/: download_figshare.py  generate_test_data.py  prepare_figshare_data.py  pyproject.toml
src/: anofox_similarity_extension.cpp
src/core/: constants.cpp  error_handling.cpp
src/include/: anofox_similarity_extension.hpp
src/include/core/: constants.hpp  error_handling.hpp  sql_safety.hpp
src/include/modules/: bom_utilities.hpp  duckpgq_integration.hpp  dynamics365_transformations.hpp  embedding_statistics.hpp  incremental_updates.hpp  jaccard_cpp.hpp  jaccard_similarity.hpp  multimodal_fusion.hpp  predecessor_inference.hpp  sap_transformations.hpp  similarity_search.hpp  statistics_functions.hpp  textual_embeddings.hpp  transactional_embeddings.hpp  universal_schema.hpp  vss_integration.hpp  wl_kernel.hpp  wl_kernel_cpp.hpp
src/modules/: bom_utilities.cpp  duckpgq_integration.cpp  dynamics365_transformations.cpp  embedding_statistics.cpp  incremental_updates.cpp  jaccard_cpp.cpp  jaccard_similarity.cpp  multimodal_fusion.cpp  predecessor_inference.cpp  sap_transformations.cpp  similarity_search.cpp  statistics_functions.cpp  textual_embeddings.cpp  transactional_embeddings.cpp  transactional_embeddings_phase2b.cpp  universal_schema.cpp  vss_integration.cpp  wl_kernel.cpp  wl_kernel_cpp.cpp
test/: README.md
test/data/adventureworks/: metadata.json
test/data/adventureworks/raw/: download_metadata.json
test/data/caterpillar/: metadata.json
test/data/erpnext/: metadata.json
test/data/erpnext/raw/: download_metadata.json
test/data/figshare/: metadata.json  metadata_subassembly.json
test/data/figshare/raw/: download_metadata.json
test/data/neo4j/: metadata.json
test/data/neo4j/raw/: download_metadata.json
test/data/odoo/: metadata.json
test/data/odoo/raw/: download_metadata.json
test/data/openhardware/: metadata.json
test/data/pdxpert/: metadata.json
test/data/pdxpert/raw/: 4-Example-ItemMaster.csv  9-Example-ListItemFilesLinks.csv  download_metadata.json
test/data/sap/: README.md
test/data/synthetic/: bom_items.csv  goods_movements.csv  ground_truth.csv  materials.csv  metadata.json
test/scripts/: compute_ground_truth.py  download_erp_bom_data.py  extract_figshare_subassembly.py  generate_synthetic_data.py
test/scripts/parsers/: __init__.py  adventureworks_parser.py  caterpillar_parser.py  erpnext_parser.py  neo4j_parser.py  odoo_parser.py  openhardware_parser.py  pdxpert_parser.py
test/scripts/test/data/adventureworks/raw/: download_metadata.json
test/scripts/test/data/neo4j/raw/: bom.cypher  bom2.cypher  download_metadata.json
test/sql/: README.md  anofox_similarity.test  cold_start_analogs.test  find_similar_materials.test
test/sql/accuracy/: accuracy_functions.test  figshare_accuracy.test  predecessor_f1.test  synthetic_accuracy.test
test/sql/algorithms/jaccard/: edge_cases.test
test/sql/algorithms/wl_kernel/: wl_kernel.test
test/sql/benchmarks/: similarity_performance.test
test/sql/datasets/adventureworks/: adventureworks_accuracy.test
test/sql/datasets/caterpillar/: caterpillar_accuracy.test  caterpillar_scale.test
test/sql/datasets/dynamics365/: d365_bom_integration.test
test/sql/datasets/erp_systems/: erp_integration.test
test/sql/datasets/figshare/: cross_category.test  material_distribution.test  product_families.test
test/sql/datasets/openhardware/: openhardware_validation.test
test/sql/datasets/sap/: bom_explosion_comprehensive.test  sap_bom_integration.test  sap_embedding_validation.test
test/sql/extension/: anofox_similarity.test  function_documentation.test
test/sql/functions/: cold_start_analogs.test  dynamics365_transformations.test  embeddings.test  find_similar_materials.test  infer_predecessors.test  jaccard_similarity.test  sap_transformations.test  wl_kernel_similarity.test
test/sql/functions/embeddings/: advanced_features.test  comparison.test  compute.test  feature_expansion.test  generation_vss.test  hnsw_search.test  index_verification.test  normalization.test  performance.test  performance_benchmark.sql  refresh.test  sap_integration.test  textual_embeddings.test  transactional_embeddings.test
test/sql/fusion/: multimodal_fusion.test  similarity_methods.test
test/sql/graph/: duckpgq_integration.test  graph_fallback.test
test/sql/hardening/: doc_examples.test  regression_hardening.test
test/sql/indexing/: vss_embedding_generation.test  vss_incremental_update.test  vss_indexed_search.test  vss_sap_integration.test  vss_similarity_comparison.test
test/sql/integration/: error_handling.test
test/sql/scenarios/: README.md  s12_transitive_chain.test  s1_identical_boms.test  s2_disjoint_boms.test  s3_controlled_overlap.test  s4_variant_clusters.test  s5_hierarchical_bom.test  s6_predecessor_chain.test  s7_anticorrelation.test  s8_phaseout.test  s9_no_predecessor.test
test/sql/schema/: bom_conversion.test  universal_bom_schema.test
test/sql/tier1_edge_cases/: empty_sets.test  null_handling.test  type_coercion.test
test/sql/tier1_synthetic/: s1_identical_boms.test  s2_disjoint_boms.test  s3_controlled_overlap.test  s4_variant_clusters.test  s5_hierarchical_bom.test  s6_predecessor_chain.test
test/sql/tier2_figshare/: product_families.test
test/sql/tier3_metrics/: accuracy_functions.test  figshare_accuracy.test  predecessor_f1.test  synthetic_accuracy.test
(+8 files in other folders)
